--- a/pubu2.html
+++ b/pubu2.html
@@ -94,7 +94,7 @@ function ajaxPanWal() {
 	jigsaw.pageno++;
 	console.log(jsonData);
        const fl = document.getElementById("fl")
-	for (var i = jigsaw.pageno * jigsaw.pageSize; i < jigsaw.pageno * jigsaw.pageSize + jsonData.datalist.length(); i++) {
+	for (var i = jigsaw.pageno * jigsaw.pageSize; i < jigsaw.pageno * jigsaw.pageSize + jsonData.datalist.length; i++) {
 		imgList = jsonData.datalist
 		console.log(imageList);
 		if (imgList[i].name.indexOf(".mp4") > 0) continue;
