--- a/pubu2.html
+++ b/pubu2.html
@@ -93,10 +93,10 @@ function ajaxPanWal() {
         });
 	jigsaw.pageno++;
 	console.log(jsonData);
+	var imgList = jsonData.datalist;
+	console.log(imgList);
        const fl = document.getElementById("fl")
-	for (var i = jigsaw.pageno * jigsaw.pageSize; i < jigsaw.pageno * jigsaw.pageSize + jsonData.datalist.length; i++) {
-		imgList = jsonData.datalist
-		console.log(imageList);
+	for (var i = jigsaw.pageno * jigsaw.pageSize; i < jigsaw.pageno * jigsaw.pageSize + imgList.length; i++) {
 		if (imgList[i].name.indexOf(".mp4") > 0) continue;
 		const div = document.createElement('div')
 		div.innerHTML = '<img onclick="showBigImg(this)" data-src="https://image.gincode.icu/file/' + imgList[i].name + '" src="https://image.gincode.icu/file/' + imgList[i].name + '" class="lazyload">'
